# Noctis

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  My ProjectMy Project.proj  README.md  SECURITY.md  vcpkg.json
noctis_editor/: CMakeLists.txt
noctis_editor/include/editor/: project.hpp
noctis_editor/include/editor/ui/: project_selection.hpp
noctis_editor/include/editor/utils/: imgui_utils.hpp
noctis_editor/src/: editor.cpp  editor.hpp  editor_main.cpp  project.cpp  project.hpp  scene_manager.cpp  scene_manager.hpp
noctis_editor/src/asset/: assets.hpp  editor_asset_manager.cpp  editor_asset_manager.hpp
noctis_editor/src/asset/importer/: model_importer.cpp  model_importer.hpp  texture_importer.cpp  texture_importer.hpp
noctis_editor/src/asset_management/: editor_asset_manager.cpp  editor_asset_manager.hpp
noctis_editor/src/asset_management/asset/: asset.hpp  material_asset.hpp  model_asset.hpp  shader_asset.hpp  texture_asset.hpp
noctis_editor/src/asset_management/importer/: model_importer.cpp  model_importer.hpp  texture_importer.cpp  texture_importer.hpp
noctis_editor/src/ui/: editor_ui.cpp  editor_ui.hpp  project_selection.cpp  project_selection.hpp
noctis_editor/src/ui/widget/: actor_properties.cpp  actor_properties.hpp  asset_explorer.cpp  asset_explorer.hpp  console.cpp  console.hpp  properties.cpp  properties.hpp  scene_display.cpp  scene_display.hpp  scene_tree.cpp  scene_tree.hpp  widget.hpp
noctis_editor/src/utils/: actor_creation_helper.cpp  actor_creation_helper.hpp  imgui_utils.cpp  imgui_utils.hpp  property_rendering.cpp  property_rendering.hpp
noctis_engine/: CMakeLists.txt
noctis_engine/include/engine/: asset_manager.hpp  engine.hpp  filesystem.hpp  logger.hpp  window.hpp
noctis_engine/include/engine/asset/: asset.hpp  asset_manager.hpp
noctis_engine/include/engine/ecs/: component_array.hpp  component_array.inl  component_manager.hpp  component_manager.inl  entity.hpp
noctis_engine/include/engine/math/: color.hpp  math.hpp
noctis_engine/include/engine/property/: asset_property.hpp  int_property.hpp  property.hpp  property_holder.hpp
noctis_engine/include/engine/rendering/: camera.hpp  framebuffer.hpp  material.hpp  mesh.hpp  model.hpp  shader.hpp  ssbo.hpp  texture.hpp  vertex.hpp
noctis_engine/include/engine/scene/: scene.hpp  scene.inl  scene_manager.hpp
noctis_engine/include/engine/scripting/: engine_bindings.hpp  script_builder.hpp
noctis_engine/include/engine/utils/: uuid.hpp
noctis_engine/include/noctis/: engine.hpp  filesystem.hpp  logger.inl  scene.hpp  window.hpp
noctis_engine/include/noctis/asset/: asset.hpp  asset_manager.hpp
noctis_engine/include/noctis/ecs/: component_array.inl  component_manager.hpp  component_manager.inl  entity.hpp
noctis_engine/include/noctis/math/: color.hpp
noctis_engine/include/noctis/property/: color_property.hpp  property.hpp  property_holder.hpp  string_property.hpp  vec3_property.hpp
noctis_engine/include/noctis/rendering/: camera.hpp  graphics_backend_ctx.hpp  material.hpp  model.hpp  shader.hpp  ssbo.hpp  ssbo.inl  uniform_buffer.hpp  vertex_array.hpp
noctis_engine/include/noctis/scene/: scene_manager.hpp
noctis_engine/include/noctis/scripting/: script_builder.hpp
noctis_engine/include/noctis/serialization/: serializable.hpp
noctis_engine/include/noctis/window/: window.hpp
noctis_engine/src/: filesystem.cpp  logger.cpp  scene.cpp  window.cpp
noctis_engine/src/asset/: asset_manager.cpp
noctis_engine/src/ecs/: component_manager.cpp
noctis_engine/src/ecs/component/: actor_component.cpp  component.cpp  component_registry.cpp  light_component.cpp  material_component.cpp  model_component.cpp  script_component.cpp  transform_component.cpp
noctis_engine/src/ecs/system/: lighting_system.cpp  render_system.cpp  scripting_system.cpp  systems_manager.cpp
noctis_engine/src/math/: color.cpp  math.cpp
noctis_engine/src/rendering/: camera.cpp  framebuffer.cpp  mesh.cpp  model.cpp  shader.cpp  ssbo.cpp  texture.cpp  uniform_buffer.cpp  vertex_array.cpp
noctis_engine/src/rendering/opengl/: ogl_ctx.cpp  ogl_shader.cpp  ogl_ssbo.cpp  ogl_uniform_buffer.cpp  ogl_vertex_array.cpp
noctis_engine/src/scene/: scene.cpp  scene_manager.cpp
noctis_engine/src/scripting/: engine_bindings.cpp  script_builder.cpp
noctis_engine/src/serialization/: serializable.cpp
noctis_engine/src/utils/: uuid.cpp
noctis_engine/src/window/: window.cpp
noctis_testing/: CMakeLists.txt  main.cpp
une_editor/: CMakeLists.txt
une_editor/include/editor/: actor_creation_helper.hpp  editor.hpp  editor_ui.hpp  project.hpp
une_editor/include/editor/ui/: editor_ui.hpp  project_selection.hpp
une_editor/include/editor/utils/: actor_creation_helper.hpp  property_rendering.hpp
une_editor/include/editor/widget/: asset_explorer.hpp  scene_display.hpp  scene_tree.hpp
une_editor/src/: actor_creation_helper.cpp  editor.cpp  editor_main.cpp  editor_ui.cpp  project.cpp
une_editor/src/ui/: editor_ui.cpp  imgui_utils.cpp  project_selection.cpp
une_editor/src/ui/widget/: actor_properties.cpp  asset_explorer.cpp  scene_display.cpp  scene_tree.cpp
une_editor/src/utils/: actor_creation_helper.cpp  property_rendering.cpp
une_editor/src/widget/: actor_properties.cpp  asset_explorer.cpp  console.cpp  scene_display.cpp  scene_tree.cpp
une_engine/: CMakeLists.txt
une_engine/include/engine/: asset_manager.hpp  engine.hpp  filesystem.hpp  logger.hpp  window.hpp
une_engine/include/engine/ecs/: component_array.hpp  component_array.inl  component_manager.hpp  component_manager.inl  entity.hpp
une_engine/include/engine/math/: color.hpp  math.hpp
une_engine/include/engine/scene/: scene.hpp  (+1 more)
une_engine/src/: asset_manager.cpp  filesystem.cpp  window.cpp
une_engine/src/ecs/: component_manager.cpp
une_engine/src/math/: color.cpp  math.cpp
une_engine/src/rendering/: camera.cpp  framebuffer.cpp  model.cpp  shader.cpp  texture.cpp
une_engine/src/scene/: scene.cpp  scene_manager.cpp
une_engine/src/scripting/: engine_bindings.cpp  script_builder.cpp
une_engine/src/utils/: uuid.cpp
(+231 files in other folders)
